--- a/Quizz/public/css/quizz.css
+++ b/Quizz/public/css/quizz.css
@@ -62,58 +62,59 @@ body {
     margin-top: 4%;
     color: #ffffff;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
 }
 
 /* Partie concernant les inputs et logos ainsi que les champs d'erreur */
 
 .input-form {
-    float: left;
-    margin-left: 5%;
-    width: 90%;
+    margin-left: 10px 35px;
     height: 70px;
-    margin-top: 5%;
-    background: #e6e6e6;
+    width: 100%;
+   
 }
 .control {
     float: left;
-    width: 85%;
-    margin-top: 1.5%;
-    margin-left: 3%;
-    height: 47px;
-    border: 0px;
-    font-size: 30px;
-    color: #ffffff;
-    font-weight: bold;-size: 25px;
-    background: #e6e6e6;
-    color: #949494;
+    width: 100%;
+    height: 46px;
+    border-radius: 10px;
+    border: 1px solid silver;
 }
 .icone1 {
-    float: right;
+    float: left;
+
+    position: relative;
+    left: 96%;
+    top: 55px;
+    height: 35px;
+    width: 50px;
+}
+.icone-form-login{
     background-image: url(../Icônes/ic-login.png);
     background-repeat: no-repeat;
-    background-size: cover;
-    margin-right: 5%;
-    margin-top: 2%;
-    height: 40px;
-    width: 40px;
 }
-.icone2 {
+.icone-form-pwd{
+    background-image: url(../Icônes/ic-password.png);
+    background-repeat: no-repeat;
+    float: left;
+    margin-right: 50%;
+    margin-top: 20px;
+}
+/*.icone2 {
     float: right;
     background-image: url(../Icônes/ic-password.png);
     background-repeat: no-repeat;
-    background-size: cover;
-    margin-right: 5%;
-    margin-top: 2%;
+    position: relative;
+    left: 96%;
+    top: 50px;
     height: 40px;
     width: 40px;
-}
+}*/
 .error {
     float: left;
-    width: 90%;
+    width: 100%;
     margin-top: 1%;
-    height: 10px;
     font-size: 15px;
     color: blue;
     font-weight: bold;
@@ -129,32 +130,34 @@ span {
 
 /* Partie concernant le bouton de connexion et le lien d'inscription */
 
-button {
+.btn-form {
+    height: 45px;
+    width: 35%;
     float: left;
-    width: 20%;
-    height: 50px;
-    margin-left: 5%;
-    margin-top: 7%;
-    border-radius: 7px;
+    margin-left: 7%;
+    margin-top: 40px;
+    border-radius: 5px;
     border: 0px;
-    background: #45b4d6;
+    background-color: darkturquoise;
     color: #ffffff;
-    font-size: 30px;
-    font-weight: bold;-size: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    border: 1px solid darkturquoise;
 }
 .inscription {
     float: left;
-    width: 32.5%;
+    width: 50%;
     height: 8%;
-    margin-left: 5%;
-    margin-top: 8.2%;
+    margin-left: 8%;
+    margin-top: 10%;
 }
 .inscription a {
     text-decoration: none;
-    font-size: 30px;
+    font-size: 20px;
     color: #ffffff;
-    font-weight: bold;-size: 28px;
+    font-weight: bold;
     color: #949494;
+    margin-left: 5px;
 }
 
 /* Interface de l'admin */
@@ -237,17 +240,17 @@ button {
     width: 40%;
     height: 20%;
     margin-left: 5%;
-    margin-top: 11%;
-    font-size: 30px;
-    color: #ffffff;
+    margin-top: 10%;
+    font-size: 26px;
+    color: white;
     font-weight: bold;
 }
 .nom {
     float: left;
     width: 40%;
     height: 20%;
-    margin-left: 18%;
-    font-size: 30px;
+    margin-left: 20%;
+    font-size: 33px;
     color: #ffffff;
     font-weight: bold;
 }
@@ -264,7 +267,7 @@ button {
     float: left;
     width: 50%;
     height: 60%;
-    font-size: 30px;
+    font-size: 27px;
     margin-left: 5%;
     margin-top: 2.2%;
     color: #949494;
@@ -331,20 +334,21 @@ button {
 input{
     float: left;
     margin-left: 25px;
-    width: 60%;
+    width: 5%;
     height: 30px;
-    margin-top: 1%;
+    margin-top: 2%;
     background: #e6e6e6;
     border: 2px ridge;
     border-radius: 10px;
 }
+
 .prenom{
     float: left;
-    font-size: 13px;
-    color: black;
+    font-size: 26px;
+    color: white;
     width: 50%;
     height: 4%;
-    margin-top: 1%;
+    margin-top: 10%;
 }
 form{
     float: left;
@@ -404,7 +408,230 @@ form{
 .avatar-admin{
     text-align: right;
     color: black;
-    margin: 5px;
+    margin: 179px;
     margin-left: 20px;
     font-size: 15px;
+}
+/* Partie joueur */
+
+.cadre {
+    float: left;
+    width: 98%;
+    height: 98%;
+    margin-left: 1%;
+    margin-top: 0.5%;
+    border-radius: 3px;
+    background: #e6e6e6;
+}
+
+/* Partie entete */
+
+.enteter {
+    width: 100%;
+    height: 20%;
+    background: #45b4d6;
+}
+.joueurr {
+    float: left;
+    width: 20%;
+    height: 100%;
+}
+.titler {
+    float: left;
+    width: 60%;
+    height: 50%;
+    margin-left: 3%;
+    margin-top: 1.5%;
+    text-align: center;
+    font-size: 24px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.buttonn {
+    float: left;
+    width: 11%;
+    height: 40%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border-radius: 10px;
+    font-size: 20px;
+    background: #1b81b1;
+    color: #ffffff;
+}
+.images {
+    float: left;
+    width: 38%;
+    height: 70%;
+    border-radius: 70%;
+    border: 4px solid #ffffff;
+    margin-left: 7%;
+    margin-top: 5%;
+}
+.images img {
+    width: 100%;
+    height: 100%;
+    border-radius: 70%;
+}
+.prenomm {
+    float: left;
+    width: 40%;
+    height: 20%;
+    margin-left: 5%;
+    margin-top: 8%;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.nomm {
+    float: left;
+    width: 32%;
+    height: 20%;
+    margin-left: 13%;
+    margin-top: 5%;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+/* Partie concernant la zone d'affichage des questions et du score */
+
+/* Partie concernant les questions */
+.nbr-Q-par-jeu{
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
+}
+p{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 12px;
+}
+.nbr-de-question-affich{
+    width: 46px;
+    height: 31px;
+    float: right;
+    margin-top: -66px;
+    margin-right: 194px;
+    border-radius: 0px;
+    box-shadow: 1px 1px #45b4d6;
+}
+.OK{
+    width: 42px;
+    height: 36px;
+    float: right;
+    margin-top: -65px;
+    margin-right: 131px;
+    border-radius: 7px;
+    box-shadow: 1px 1px #45b4d6;
+    background-color: blue;
+    color: white;
+}
+.cadre-Q{
+    width: 91%;
+    min-height: 347px;
+    border: 2px solid #45b4d6;
+    border-radius: 5px;
+    margin-left: 35px;
+}
+.precedant{
+    width: 97px;
+    height: 34px;
+    color: white;
+    border: 2px solid #45b4d6;
+    border-radius: 5px;
+    margin-left: 47px;
+    margin-top: 10px;
+    background-color: darkturquoise;
+}
+.suivant{
+    float: right;
+    width: 97px;
+    height: 34px;
+    color: white;
+    border: 2px solid #45b4d6;
+    border-radius: 5px;
+    margin-right: 41px;
+    margin-top: 10px;
+    background-color: darkturquoise;
+}
+.bouton {
+    color: white;
+    text-decoration: none;
+
+}
+
+.fonds {
+    float: left;
+    width: 99%;
+    height: 78%;
+    margin-left: 0.5%;
+    margin-top: 0.4%;
+    border-radius: 5px;
+    background: #ffffff;
+}
+.question {
+    float: left;
+    width: 65%;
+    height: 90%;
+    margin-left: 3%;
+    margin-top: 1.5%;
+    border: 3px solid #45b4d6;
+    border-radius: 5px;
+}
+
+/* Partie concernant les scores */
+
+.score {
+    float: right;
+    width: 25%;
+    height: 75%;
+    margin-right: 3%;
+    margin-top: 3.5%;
+    border: 3px ridge #45b4d6;
+    border-radius: 5px;
+}
+.top {
+    float: left;
+    width: 50%;
+    height: 12%;
+    background: #dbd7d7;
+    text-decoration: none;
+    color: #45b4d6;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+.topp {
+    margin-left: 22%;
+    margin-top: 3%;
+    font-size: 23px;
+    border-top-left-radius: 5px;
+}
+.tope {
+    margin-left: 8%;
+    margin-top: 5.5%;
+    font-size: 17px;
+}
+.liste {
+    float: left;
+    width: 100%;
+    height: 88%;
+    border-radius: 2px;
+}
+.listes-joueurs{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgba(128, 128, 128, 0.658);
+    text-align: center;
+    margin-top: 20px;
+}
+.tab-joueur{
+    border: 2px solid #45b4d6;
+    width: 55%;
+    height: 350px;
+    margin-left: 22%;
+    
+}
+th{
+    border: 1px solid black;
+    top: 20%;
 }
