--- a/Quizz/public/css/quizz.css
+++ b/Quizz/public/css/quizz.css
@@ -333,10 +333,10 @@ span {
 }
 input{
     float: left;
-    margin-left: 25px;
-    width: 5%;
-    height: 30px;
-    margin-top: 2%;
+    margin-left: 39px;
+    width: 2%;
+    height: 15px;
+    margin-top: 0%;
     background: #e6e6e6;
     border: 2px ridge;
     border-radius: 10px;
@@ -510,8 +510,8 @@ p{
     width: 46px;
     height: 31px;
     float: right;
-    margin-top: -66px;
-    margin-right: 194px;
+    margin-top: -70px;
+    margin-right: -100px;
     border-radius: 0px;
     box-shadow: 1px 1px #45b4d6;
 }
@@ -519,8 +519,8 @@ p{
     width: 42px;
     height: 36px;
     float: right;
-    margin-top: -65px;
-    margin-right: 131px;
+    margin-top: -69px;
+    margin-right: -166px;
     border-radius: 7px;
     box-shadow: 1px 1px #45b4d6;
     background-color: blue;
@@ -536,12 +536,17 @@ p{
 .precedant{
     width: 97px;
     height: 34px;
-    color: white;
     border: 2px solid #45b4d6;
     border-radius: 5px;
     margin-left: 47px;
     margin-top: 10px;
     background-color: darkturquoise;
+}
+.precedant a{
+    text-decoration: none;
+    color: white;
+    font-size: 13px;
+    font-weight: bold;
 }
 .suivant{
     float: right;
@@ -554,10 +559,11 @@ p{
     margin-top: 10px;
     background-color: darkturquoise;
 }
-.bouton {
-    color: white;
+.suivant a{
     text-decoration: none;
-
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .fonds {
@@ -572,7 +578,7 @@ p{
 .question {
     float: left;
     width: 65%;
-    height: 90%;
+    min-height: 82%;
     margin-left: 3%;
     margin-top: 1.5%;
     border: 3px solid #45b4d6;
@@ -634,4 +640,72 @@ p{
 th{
     border: 1px solid black;
     top: 20%;
+}
+.topscore{
+    font-size: 20px;  
+    font-weight: bold;
+    margin: 3%; 
+}
+.nbr-score{
+    float: right;
+    margin-top: -9%;
+    margin-right: 11%;  
+    
+    border-bottom: 3px solid rgb(207, 204, 19); 
+    width : 59px;
+}
+.suivant1{
+    float: right;
+    width: 97px;
+    height: 34px;
+    color: white;
+    border: 2px solid #45b4d6;
+    border-radius: 5px;
+    margin-right: 41px;
+    margin-top: 10px;
+    background-color: darkturquoise;
+}
+.suivant1 a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+}
+.precedant1{
+    width: 97px;
+    height: 34px;
+    border: 2px solid #45b4d6;
+    border-radius: 5px;
+    margin-left: 47px;
+    margin-top: 10px;
+    background-color: darkturquoise;
+}
+.precedant1 a{
+    text-decoration: none;
+    color: white;
+    font-size: 13px;
+    font-weight: bold;
+}
+.pagination2{
+    width: 61%;
+    height: 50px;
+    margin-left: 5%;
+    float: left;
+}
+.Qjoueur{
+    border-radius: 3px;
+    box-shadow: 2px 2px darkturquoise;
+    width: 94%;
+    height: 117px;
+    margin-left: 3%;
+    margin-top: 1%;
+    background-color: #e7e4e4;
+}
+.compteur-question{
+    width: 29%;
+    height: 57px;
+    box-shadow: 2px 2px darkturquoise;
+    background-color: #faf6f6;
+    margin: 2%;
+    margin-left: 34%;
 }
